Remove background image

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     html {
         height: 100%;
         margin: 0;
+        background-color: coral;
     }
 
     .bgimg {
-        background-image: url('background.jpg');
         height: 100%;
         background-position: center;
         background-size: cover;
@@ -56,13 +56,13 @@
             <p id="demo" style="font-size:30px"></p>
         </div>
         <div class="bottomleft">
-            <p>Software Engineer</p>
+            <p>Someday this site will have actual content! 🙇🏻‍♂️</p>
         </div>
     </div>
 
     <script>
         // Set the date we're counting down to
-        var countDownDate = new Date("Jan 1, 2020").getTime();
+        var countDownDate = new Date("Jan 1, 2022").getTime();
 
         // Update the count down every 1 second
         var countdownfunction = setInterval(function () {
