--- a/public/404.html
+++ b/public/404.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
-<meta name="description" content="" />
+<meta name="description" content="Hugo &#43; Bear = :heart:" />
 <meta name="keywords" content="" />
 
 
-<meta property="og:url" content="http://localhost:1313/404.html">
+<meta property="og:url" content="https://blog.albertcui.dev/404.html">
   <meta property="og:site_name" content="Albs Blog">
   <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="Hugo &#43; Bear = :heart:">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
@@ -22,11 +23,13 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="404 Page not found">
+  <meta name="twitter:description" content="Hugo &#43; Bear = :heart:">
 
 
 
 
   <meta itemprop="name" content="404 Page not found">
+  <meta itemprop="description" content="Hugo &#43; Bear = :heart:">
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
@@ -199,6 +202,10 @@
   <h2>Albs Blog</h2>
 </a>
 <nav>
+<a href="/">Home</a>
+
+<a href="/blog/">Blog</a>
+
 </nav>
 </header>
   <main>
